<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />

    </group>

    <group
        android:id="@+id/menu_about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

    <item
        android:id="@+id/btn_dark_mode"
        android:title="@string/dark_mode"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
</menu>