<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_extra_dark"
    tools:context=".ui.favorite.FavoriteFragment">

    <TextView
        android:id="@+id/tv_favorite"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/favorite_list"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_favorite" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_user"
        app:layout_constraintStart_toStartOf="@+id/rv_user"
        app:layout_constraintTop_toTopOf="@+id/rv_user" />

    <TextView
        android:id="@+id/nothing_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_is_no_favorite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
        app:layout_constraintEnd_toEndOf="@+id/rv_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_user" />

    <TextView
        android:id="@+id/tv_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failure"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
        app:layout_constraintEnd_toEndOf="@+id/rv_user"
        app:layout_constraintStart_toStartOf="@+id/rv_user"
        app:layout_constraintTop_toTopOf="@+id/rv_user" />
</androidx.constraintlayout.widget.ConstraintLayout>